--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "🌌 lightweight template for creating a website with module bundling hmr, typescript, tailwindcss & sass",
   "keywords": [],
   "scripts": {
-    "dev": "parcel src/*.html & ./scripts/create_manifest.sh && ./scripts/copy_icons.sh",
-    "build": "rm -rf dist && parcel build src/*.html && ./scripts/create_manifest.sh && ./scripts/copy_icons.sh"
+    "dev": "parcel src/**/*.html & ./scripts/create_manifest.sh && ./scripts/copy_icons.sh",
+    "build": "rm -rf dist && parcel build src/**/*.html && ./scripts/create_manifest.sh && ./scripts/copy_icons.sh"
   },
   "dependencies": {
-    "parcel": "^2.11.0"
+    "parcel": "^2.12.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.263",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
 }
