--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mtab",
-  "author": "maxhu08",
+  "author": "Max Hu",
   "version": "1.0.0",
   "description": "a simple configurable new tab extension",
   "keywords": [],
