--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.263",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
