--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev-firefox": "mkdir -p dist && parcel src/**/*.html & ./scripts/create_manifest_firefox.sh && ./scripts/copy_assets.sh",
     "build-chrome": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist & ./scripts/create_manifest_chrome.sh && ./scripts/copy_assets.sh",
     "build-firefox": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist & ./scripts/create_manifest_firefox.sh && ./scripts/copy_assets.sh",
+    "build-firefox-windows": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist && ./scripts/create_manifest_firefox.bat && ./scripts/copy_assets.bat",
     "prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "dependencies": {
