--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-chrome": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist & ./scripts/create_manifest_chrome.sh && ./scripts/copy_assets.sh",
     "build-firefox": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist & ./scripts/create_manifest_firefox.sh && ./scripts/copy_assets.sh",
     "build-firefox-windows": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist && ./scripts/create_manifest_firefox.bat && ./scripts/copy_assets.bat",
-    "prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
+    "prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
+    "prepare": "husky"
   },
   "dependencies": {
     "parcel": "^2.12.0"
@@ -18,6 +19,7 @@
     "@types/chrome": "^0.0.263",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
+    "husky": "^9.0.11",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
