--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "a simple configurable new tab extension",
   "keywords": [],
   "scripts": {
-    "dev-chrome": "mkdir -p dist && parcel src/**/*.html & ./scripts/create_manifest_chrome.sh && ./scripts/copy_assets.sh",
-    "dev-firefox": "mkdir -p dist && parcel src/**/*.html & ./scripts/create_manifest_firefox.sh && ./scripts/copy_assets.sh",
-    "build-chrome": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist & ./scripts/create_manifest_chrome.sh && ./scripts/copy_assets.sh",
-    "build-firefox": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist & ./scripts/create_manifest_firefox.sh && ./scripts/copy_assets.sh",
-    "build-firefox-windows": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist && ./scripts/create_manifest_firefox.bat && ./scripts/copy_assets.bat",
-    "package-chrome": "bun build-chrome && ./scripts/package_chrome.sh",
-    "package-firefox": "bun build-firefox && ./scripts/package_firefox.sh",
+    "dev-chrome": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
+    "dev-firefox": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
+    "build-chrome": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
+    "build-firefox": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
+    "build-firefox-windows": "mkdir -p dist && parcel build src/**/*.html --no-scope-hoist && ./scripts/win/create_manifest_firefox.bat && ./scripts/win/copy_assets.bat",
+    "package-chrome": "bun build-chrome && ./scripts/linux/package_chrome.sh",
+    "package-firefox": "bun build-firefox && ./scripts/linux/package_firefox.sh",
     "clean": "rm -rf .parcel-cache && rm -rf dist",
     "prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
     "prepare": "husky"
