--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES5",
+    "sourceMap": false,
     "module": "ESNext",
     "strict": true,
     "baseUrl": "./",
