remove localstorage wallpaper and update scripts

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "a simple configurable new tab extension",
   "keywords": [],
   "scripts": {
-    "dev-chrome": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
-    "dev-firefox": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
+    "dev-chrome": "mkdir -p dist && parcel src/**/*.html --log-level verbose & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
+    "dev-firefox": "mkdir -p dist && parcel src/**/*.html --log-level verbose & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
     "build-chrome": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
     "build-firefox": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
     "build-firefox-windows": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist && ./scripts/win/create_manifest_firefox.bat && ./scripts/win/copy_assets.bat",
@@ -17,6 +17,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@parcel/runtime-browser-hmr": "^2.12.0",
     "parcel": "^2.12.0"
   },
   "devDependencies": {
