simplify code and more

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "keywords": [],
   "scripts": {
     "d": "bun clean && bun dev-chrome",
-    "dev-chrome": "mkdir -p dist && parcel src/**/*.html --log-level verbose & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
-    "dev-firefox": "mkdir -p dist && parcel src/**/*.html --log-level verbose & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
+    "dev-chrome": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
+    "dev-firefox": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
     "build-chrome": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
     "build-firefox": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
     "build-firefox-windows": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist && ./scripts/win/create_manifest_firefox.bat && ./scripts/win/copy_assets.bat",
