--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "mathjs": "^13.1.1",
     "parcel": "^2.12.0"
   },
   "devDependencies": {
