--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@typescript-eslint/parser": "^7.18.0",
     "husky": "^9.1.6",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14"
   }
 }
