--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,13 @@
   "printWidth": 100,
   "trailingComma": "none",
   "arrowParens": "always",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "overrides": [
+    {
+      "files": "*.html",
+      "options": {
+        "printWidth": 200
+      }
+    }
+  ]
 }
