--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build-chrome": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
     "build-firefox": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
     "build-firefox-windows": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist && ./scripts/win/create_manifest_firefox.bat && ./scripts/win/copy_assets.bat",
-    "package-chrome": "bun build-chrome && ./scripts/linux/package_chrome.sh",
-    "package-firefox": "bun build-firefox && ./scripts/linux/package_firefox.sh",
+    "package-chrome": "bun clean && bun build-chrome && ./scripts/linux/package_chrome.sh",
+    "package-firefox": "bun clean && bun build-firefox && ./scripts/linux/package_firefox.sh",
     "zip-source": "./scripts/linux/zip_source.sh",
     "clean": "rm -rf .parcel-cache && rm -rf dist",
     "prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json,html}\"",
