add sorting bookmarks (wip)

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "dependencies": {
     "mathjs": "^13.2.3",
-    "parcel": "^2.13.0"
+    "parcel": "^2.13.0",
+    "sortablejs": "^1.15.6"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.263",
+    "@types/sortablejs": "^1.15.8",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "husky": "^9.1.7",
