switch to using blobs and idb-keyval

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "caniuse-lite": "^1.0.30001697",
+    "idb-keyval": "^6.2.1",
     "mathjs": "^13.2.3",
     "parcel": "^2.13.3",
     "sortablejs": "^1.15.6",
