--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "caniuse-lite": "^1.0.30001723",
+    "caniuse-lite": "^1.0.30001751",
     "idb-keyval": "^6.2.2",
     "mathjs": "^13.2.3",
-    "parcel": "^2.15.2",
+    "parcel": "2.16.0",
     "sortablejs": "^1.15.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.263",
-    "@types/sortablejs": "^1.15.8",
+    "@types/sortablejs": "^1.15.9",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "husky": "^9.1.7",
     "postcss": "^8.5.6",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
-    "tailwindcss": "^3.4.17"
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^3.4.18"
   }
 }
