--- a/package.json
+++ b/package.json
@@ -19,22 +19,25 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "caniuse-lite": "^1.0.30001751",
+    "caniuse-lite": "^1.0.30001761",
     "idb-keyval": "^6.2.2",
     "mathjs": "^13.2.3",
-    "parcel": "2.16.0",
+    "parcel": "2.16.3",
     "sortablejs": "^1.15.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@parcel/config-default": "2.16.3",
+    "@parcel/core": "2.16.3",
+    "@parcel/resolver-default": "2.16.3",
     "@types/chrome": "^0.0.263",
     "@types/sortablejs": "^1.15.9",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "husky": "^9.1.7",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.19"
   }
 }
