add search suggestions

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "d": "bun dev",
     "dev": "bun clean && bun dev-chrome",
-    "dev-chrome": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
-    "dev-firefox": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
-    "build-chrome": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh",
-    "build-firefox": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh",
-    "build-firefox-windows": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist && ./scripts/win/create_manifest_firefox.bat && ./scripts/win/copy_assets.bat",
+    "dev-chrome": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh && ./scripts/linux/copy_sw.sh",
+    "dev-firefox": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh && ./scripts/linux/copy_sw.sh",
+    "build-chrome": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh && ./scripts/linux/copy_sw.sh",
+    "build-firefox": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh && ./scripts/linux/copy_sw.sh",
+    "build-firefox-windows": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist && ./scripts/win/create_manifest_firefox.bat && ./scripts/win/copy_assets.bat && ./scripts/win/copy_sw.bat",
     "package-chrome": "bun clean && bun build-chrome && ./scripts/linux/package_chrome.sh",
     "package-firefox": "bun clean && bun build-firefox && ./scripts/linux/package_firefox.sh",
     "zip-source": "./scripts/linux/zip_source.sh",
