--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mathjs": "^13.2.3",
     "parcel": "2.16.3",
     "sortablejs": "^1.15.6",
+    "tippy.js": "^6.3.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
