feat(build): refactor build scripts and more

--- a/package.json
+++ b/package.json
@@ -4,25 +4,32 @@
   "description": "a simple configurable new tab extension",
   "keywords": [],
   "scripts": {
-    "d": "bun dev",
-    "dev": "bun clean && bun dev-chrome",
-    "dev-chrome": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh && ./scripts/linux/copy_sw.sh",
-    "dev-firefox": "mkdir -p dist && parcel src/**/*.html & ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh && ./scripts/linux/copy_sw.sh",
-    "build-chrome": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist && ./scripts/linux/create_manifest_chrome.sh && ./scripts/linux/copy_assets.sh && ./scripts/linux/copy_sw.sh && ./scripts/linux/package_chrome.sh",
-    "build-firefox": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist && ./scripts/linux/create_manifest_firefox.sh && ./scripts/linux/copy_assets.sh && ./scripts/linux/copy_sw.sh && ./scripts/linux/package_firefox.sh",
-    "build-firefox-windows": "mkdir -p dist && parcel build src/**/*.html --no-source-maps --no-scope-hoist && ./scripts/win/create_manifest_firefox.bat && ./scripts/win/copy_assets.bat && ./scripts/win/copy_sw.bat",
-    "package-chrome": "bun clean && bun build-chrome",
-    "package-firefox": "bun clean && bun build-firefox",
-    "package-chrome-rc": "./scripts/linux/package_rc.sh chrome",
-    "package-firefox-rc": "./scripts/linux/package_rc.sh firefox",
-    "zip-source": "./scripts/linux/zip_source.sh",
-    "clean": "rm -rf .parcel-cache && rm -rf dist",
-    "prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json,html}\"",
+    "d": "bun run dev",
+    "dev": "bun run dev:chrome",
+    "dev:chrome": "bun run ./scripts/tasks.ts dev chrome",
+    "dev:firefox": "bun run ./scripts/tasks.ts dev firefox",
+    "build": "bun run build:chrome",
+    "build:chrome": "bun run ./scripts/tasks.ts build chrome",
+    "build:firefox": "bun run ./scripts/tasks.ts build firefox",
+    "build:firefox:windows": "bun run ./scripts/tasks.ts build firefox",
+    "package": "bun run package:chrome",
+    "package:chrome": "bun run ./scripts/tasks.ts package chrome",
+    "package:firefox": "bun run ./scripts/tasks.ts package firefox",
+    "rc:chrome": "bun run ./scripts/tasks.ts rc chrome",
+    "rc:firefox": "bun run ./scripts/tasks.ts rc firefox",
+    "package:source": "bun run ./scripts/tasks.ts source",
+    "clean": "bun run ./scripts/tasks.ts clean",
+    "format": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json,html}\"",
+    "format:check": "prettier --check \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json,html}\"",
+    "prettier": "bun run format",
+    "lint": "eslint src scripts --ext .js,.jsx,.mjs,.cjs,.ts,.tsx --ignore-pattern dist --ignore-pattern output",
+    "lint:fix": "bun run lint --fix",
+    "check": "bun run format:check && bun run lint && bun run typecheck",
     "prepare": "husky",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
-    "caniuse-lite": "^1.0.30001772",
+    "caniuse-lite": "^1.0.30001774",
     "idb-keyval": "^6.2.2",
     "mathjs": "^13.2.3",
     "parcel": "2.16.3",
@@ -35,6 +42,7 @@
     "@parcel/core": "2.16.3",
     "@parcel/resolver-default": "2.16.3",
     "@types/chrome": "^0.1.37",
+    "@types/node": "^25.3.2",
     "@types/sortablejs": "^1.15.9",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
